--- a/server/config.env
+++ b/server/config.env
@@ -2,3 +2,6 @@ PORT=3001
 
 DATABASE=mongodb+srv://user1:EUgRgSCB8L1hCWaZ@cluster0.q2ux7.mongodb.net/management?retryWrites=true&w=majority
 
+
+SECRET_KEY=GDG9uConQSNRsvK5luBrI9OFIz3fKaaP
+
